--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <!-- Logo -->
                     <div class="logo">
                         <a href="index.html" title="">
-                            <img src="assets/img/logo.png" alt="Logo" />
+                            <img src="assets/img/fabi.png" alt="Logo" />
                         </a>
                     </div>
                     <!-- End Logo -->
@@ -216,7 +216,7 @@
                         <h2 class="text-center article-title">Welcome to Boss</h2>
                         <p class="text-center">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis
                             nisl ut aliquip ex ea commodo consequat.</p>
-                        <img class="fadeInUp animate" alt="" src="assets/img/responsive_homepage.jpg" style="display: block; margin-left: auto; margin-right: auto; margin-top: 40px;">
+                        <img class="fadeInUp animate" alt="" src="assets/img/черновик мокапы.png" style="display: block; margin-left: auto; margin-right: auto; margin-top: 40px;">
                     </div>
                     <!-- End Main Text -->
                 </div>
