--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <meta name="author" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
         <!-- Favicon -->
-        <link href="favicon.ico" rel="shortcut icon">
+        <link href="https://img.icons8.com/ios/50/000000/programming.png" rel="shortcut icon" type="img/png">
         <!-- Bootstrap Core CSS -->
         <link rel="stylesheet" href="assets/css/bootstrap.css" rel="stylesheet">
         <!-- Template CSS -->
@@ -71,10 +71,10 @@
                                             <span>Typography</span>
                                             <ul>
                                                 <li>
-                                                    <a href="features-typo-basic.html">Basic Typography</a>
+                                                    <a href="assets/html/features-typo-basic.html">Basic Typography</a>
                                                 </li>
                                                 <li>
-                                                    <a href="features-typo-blockquotes.html">Blockquotes</a>
+                                                    <a href="assets/html/features-typo-blockquotes.html">Blockquotes</a>
                                                 </li>
                                             </ul>
                                         </li>
@@ -82,16 +82,16 @@
                                             <span>Components</span>
                                             <ul>
                                                 <li>
-                                                    <a href="features-labels.html">Labels</a>
+                                                    <a href="assets/html/features-labels.html">Labels</a>
                                                 </li>
                                                 <li>
-                                                    <a href="features-progress-bars.html">Progress Bars</a>
+                                                    <a href="assets/html/features-progress-bars.html">Progress Bars</a>
                                                 </li>
                                                 <li>
-                                                    <a href="features-panels.html">Panels</a>
+                                                    <a href="assets/html/features-panels.html">Panels</a>
                                                 </li>
                                                 <li>
-                                                    <a href="features-pagination.html">Pagination</a>
+                                                    <a href="assets/html/features-pagination.html">Pagination</a>
                                                 </li>
                                             </ul>
                                         </li>
@@ -99,36 +99,36 @@
                                             <span>Icons</span>
                                             <ul>
                                                 <li>
-                                                    <a href="features-icons.html">Icons General</a>
+                                                    <a href="assets/html/features-icons.html">Icons General</a>
                                                 </li>
                                                 <li>
-                                                    <a href="features-icons-social.html">Social Icons</a>
+                                                    <a href="assets/html/features-icons-social.html">Social Icons</a>
                                                 </li>
                                                 <li>
-                                                    <a href="features-icons-font-awesome.html">Font Awesome</a>
+                                                    <a href="assets/html/features-icons-font-awesome.html">Font Awesome</a>
                                                 </li>
                                                 <li>
-                                                    <a href="features-icons-glyphicons.html">Glyphicons</a>
+                                                    <a href="assets/html/features-icons-glyphicons.html">Glyphicons</a>
                                                 </li>
                                             </ul>
                                         </li>
                                         <li>
-                                            <a href="features-testimonials.html">Testimonials</a>
+                                            <a href="assets/html/features-testimonials.html">Testimonials</a>
                                         </li>
                                         <li>
-                                            <a href="features-accordions-tabs.html">Accordions & Tabs</a>
+                                            <a href="assets/html/features-accordions-tabs.html">Accordions & Tabs</a>
                                         </li>
                                         <li>
-                                            <a href="features-buttons.html">Buttons</a>
+                                            <a href="assets/html/features-buttons.html">Buttons</a>
                                         </li>
                                         <li>
-                                            <a href="features-carousels.html">Carousels</a>
+                                            <a href="assets/html/features-carousels.html">Carousels</a>
                                         </li>
                                         <li>
-                                            <a href="features-grid.html">Grid System</a>
+                                            <a href="assets/html/features-grid.html">Grid System</a>
                                         </li>
                                         <li>
-                                            <a href="features-animate-on-scroll.html">Animate On Scroll</a>
+                                            <a href="assets/html/features-animate-on-scroll.html">Animate On Scroll</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -136,34 +136,34 @@
                                     <span class="fa-copy ">Pages</span>
                                     <ul>
                                         <li>
-                                            <a href="pages-about-us.html">About Us</a>
+                                            <a href="assets/html/pages-about-us.html">About Us</a>
                                         </li>
                                         <li>
-                                            <a href="pages-services.html">Services</a>
+                                            <a href="assets/html/pages-services.html">Services</a>
                                         </li>
                                         <li>
-                                            <a href="pages-faq.html">F.A.Q.</a>
+                                            <a href="assets/html/pages-faq.html">F.A.Q.</a>
                                         </li>
                                         <li>
-                                            <a href="pages-about-me.html">About Me</a>
+                                            <a href="assets/html/pages-about-me.html">About Me</a>
                                         </li>
                                         <li>
-                                            <a href="pages-full-width.html">Full Width</a>
+                                            <a href="assets/html/pages-full-width.html">Full Width</a>
                                         </li>
                                         <li>
-                                            <a href="pages-left-sidebar.html">Left Sidebar</a>
+                                            <a href="assets/html/pages-left-sidebar.html">Left Sidebar</a>
                                         </li>
                                         <li>
-                                            <a href="pages-right-sidebar.html">Right Sidebar</a>
+                                            <a href="assets/html/pages-right-sidebar.html">Right Sidebar</a>
                                         </li>
                                         <li>
-                                            <a href="pages-login.html">Login</a>
+                                            <a href="assets/html/pages-login.html">Login</a>
                                         </li>
                                         <li>
                                             <a href="pages-sign-up.html">Sign-Up</a>
                                         </li>
                                         <li>
-                                            <a href="pages-404.html">404 Error Page</a>
+                                            <a href="assets/html/pages-404.html">404 Error Page</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -171,16 +171,16 @@
                                     <span class="fa-th ">Portfolio</span>
                                     <ul>
                                         <li>
-                                            <a href="portfolio-2-column.html">2 Column</a>
+                                            <a href="assets/html/portfolio-2-column.html">2 Column</a>
                                         </li>
                                         <li>
-                                            <a href="portfolio-3-column.html">3 Column</a>
+                                            <a href="assets/html/portfolio-3-column.html">3 Column</a>
                                         </li>
                                         <li>
-                                            <a href="portfolio-4-column.html">4 Column</a>
+                                            <a href="assets/html/portfolio-4-column.html">4 Column</a>
                                         </li>
                                         <li>
-                                            <a href="portfolio-6-column.html">6 Column</a>
+                                            <a href="assets/html/portfolio-6-column.html">6 Column</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -188,15 +188,15 @@
                                     <span class="fa-font ">Blog</span>
                                     <ul>
                                         <li>
-                                            <a href="blog-list.html">Blog</a>
+                                            <a href="assets/html/blog-list.html">Blog</a>
                                         </li>
                                         <li>
-                                            <a href="blog-single.html">Blog Single Item</a>
+                                            <a href="assets/html/blog-single.html">Blog Single Item</a>
                                         </li>
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="contact.html" class="fa-comment ">Contact</a>
+                                    <a href="assets/html/contact.html" class="fa-comment ">Contact</a>
                                 </li>
                             </ul>
                         </div>
