--- a/assets/html/blog-single.html
+++ b/assets/html/blog-single.html
@@ -14,15 +14,15 @@
         <meta name="author" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
         <!-- Favicon -->
-        <link href="favicon.ico" rel="shortcut icon">
+        <link href="https://img.icons8.com/ios/50/000000/programming.png" rel="shortcut icon" type="img/png">
         <!-- Bootstrap Core CSS -->
-        <link rel="stylesheet" href="assets/css/bootstrap.css" rel="stylesheet">
+        <link rel="stylesheet" href="../css/bootstrap.css" rel="stylesheet">
         <!-- Template CSS -->
-        <link rel="stylesheet" href="assets/css/animate.css" rel="stylesheet">
-        <link rel="stylesheet" href="assets/css/font-awesome.css" rel="stylesheet">
-        <link rel="stylesheet" href="assets/css/nexus.css" rel="stylesheet">
-        <link rel="stylesheet" href="assets/css/responsive.css" rel="stylesheet">
-        <link rel="stylesheet" href="assets/css/custom.css" rel="stylesheet">
+        <link rel="stylesheet" href="../css/animate.css" rel="stylesheet">
+        <link rel="stylesheet" href="../css/font-awesome.css" rel="stylesheet">
+        <link rel="stylesheet" href="../css/nexus.css" rel="stylesheet">
+        <link rel="stylesheet" href="../css/responsive.css" rel="stylesheet">
+        <link rel="stylesheet" href="../css/custom.css" rel="stylesheet">
         <!-- Google Fonts-->
         <link href="http://fonts.googleapis.com/css?family=Raleway:100,300,400" type="text/css" rel="stylesheet">
         <link href="http://fonts.googleapis.com/css?family=Roboto:400,300" type="text/css" rel="stylesheet">
@@ -52,8 +52,8 @@
                 <div class="row">
                     <!-- Logo -->
                     <div class="logo">
-                        <a href="index.html" title="">
-                            <img src="assets/img/logo.png" alt="Logo" />
+                        <a href="../../index.html" title="">
+                            <img src="../img/logo.png" alt="Logo" />
                         </a>
                     </div>
                     <!-- End Logo -->
@@ -64,7 +64,7 @@
                         <div class="text-center visible-lg">
                             <ul id="hornavmenu" class="nav navbar-nav">
                                 <li>
-                                    <a href="index.html" class="fa-home ">Home</a>
+                                    <a href="../../index.html" class="fa-home ">Home</a>
                                 </li>
                                 <li>
                                     <span class="fa-gears ">Features</span>
@@ -268,7 +268,7 @@
                                 <div class="clearfix"></div>
                                 <div class="blog-post-body row margin-top-15">
                                     <div class="col-md-5">
-                                        <img class="margin-bottom-20" src="assets/img/blog/image1.jpg" alt="image1">
+                                        <img class="margin-bottom-20" src="../img/blog/image1.jpg" alt="image1">
                                     </div>
                                     <div class="col-md-7">
                                         <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
@@ -305,7 +305,7 @@
                                         <div class="panel-body">
                                             <div class="row">
                                                 <div class="col-md-2">
-                                                    <img class="pull-left" src="assets/img/profiles/87.jpg" alt="image1">
+                                                    <img class="pull-left" src="../img/profiles/87.jpg" alt="image1">
                                                 </div>
                                                 <div class="col-md-10">
                                                     <label>Alex Doe</label>
@@ -325,7 +325,7 @@
                                                 <div class="row">
                                                     <div class="col-md-2 profile-thumb">
                                                         <a href="#">
-                                                            <img class="media-object" src="assets/img/profiles/99.jpg" alt="">
+                                                            <img class="media-object" src="../img/profiles/99.jpg" alt="">
                                                         </a>
                                                     </div>
                                                     <div class="col-md-10">
@@ -341,7 +341,7 @@
                                                 <div class="row">
                                                     <div class="col-md-2 profile-thumb">
                                                         <a href="#">
-                                                            <img class="media-object" src="assets/img/profiles/53.jpg" alt="">
+                                                            <img class="media-object" src="../img/profiles/53.jpg" alt="">
                                                         </a>
                                                     </div>
                                                     <div class="col-md-10">
@@ -358,7 +358,7 @@
                                                 <div class="row">
                                                     <div class="col-md-2 profile-thumb">
                                                         <a href="#">
-                                                            <img class="media-object" src="assets/img/profiles/37.jpg" alt="">
+                                                            <img class="media-object" src="../img/profiles/37.jpg" alt="">
                                                         </a>
                                                     </div>
                                                     <div class="col-md-10">
@@ -468,7 +468,7 @@
                                 <li>
                                     <div class="recent-post">
                                         <a href="">
-                                            <img class="pull-left" src="assets/img/blog/thumbs/thumb1.jpg" alt="thumb1">
+                                            <img class="pull-left" src="../img/blog/thumbs/thumb1.jpg" alt="thumb1">
                                         </a>
                                         <a href="#" class="posts-list-title">Sidebar post example</a>
                                         <br>
@@ -481,7 +481,7 @@
                                 <li>
                                     <div class="recent-post">
                                         <a href="">
-                                            <img class="pull-left" src="assets/img/blog/thumbs/thumb2.jpg" alt="thumb2">
+                                            <img class="pull-left" src="../img/blog/thumbs/thumb2.jpg" alt="thumb2">
                                         </a>
                                         <a href="#" class="posts-list-title">Sidebar post example</a>
                                         <br>
@@ -494,7 +494,7 @@
                                 <li>
                                     <div class="recent-post">
                                         <a href="">
-                                            <img class="pull-left" src="assets/img/blog/thumbs/thumb3.jpg" alt="thumb3">
+                                            <img class="pull-left" src="../img/blog/thumbs/thumb3.jpg" alt="thumb3">
                                         </a>
                                         <a href="#" class="posts-list-title">Sidebar post example</a>
                                         <br>
@@ -507,7 +507,7 @@
                                 <li>
                                     <div class="recent-post">
                                         <a href="">
-                                            <img class="pull-left" src="assets/img/blog/thumbs/thumb4.jpg" alt="thumb4">
+                                            <img class="pull-left" src="../img/blog/thumbs/thumb4.jpg" alt="thumb4">
                                         </a>
                                         <a href="#" class="posts-list-title">Sidebar post example</a>
                                         <br>
@@ -615,23 +615,23 @@
             </div>
             <!-- End Footer -->
             <!-- JS -->
-            <script type="text/javascript" src="assets/js/jquery.min.js" type="text/javascript"></script>
-            <script type="text/javascript" src="assets/js/bootstrap.min.js" type="text/javascript"></script>
-            <script type="text/javascript" src="assets/js/scripts.js"></script>
+            <script type="text/javascript" src="../js/jquery.min.js" type="text/javascript"></script>
+            <script type="text/javascript" src="../js/bootstrap.min.js" type="text/javascript"></script>
+            <script type="text/javascript" src="../js/scripts.js"></script>
             <!-- Isotope - Portfolio Sorting -->
-            <script type="text/javascript" src="assets/js/jquery.isotope.js" type="text/javascript"></script>
+            <script type="text/javascript" src="../js/jquery.isotope.js" type="text/javascript"></script>
             <!-- Mobile Menu - Slicknav -->
-            <script type="text/javascript" src="assets/js/jquery.slicknav.js" type="text/javascript"></script>
+            <script type="text/javascript" src="../js/jquery.slicknav.js" type="text/javascript"></script>
             <!-- Animate on Scroll-->
-            <script type="text/javascript" src="assets/js/jquery.visible.js" charset="utf-8"></script>
+            <script type="text/javascript" src="../js/jquery.visible.js" charset="utf-8"></script>
             <!-- Stellar Parallax -->
-            <script type="text/javascript" src="assets/js/jquery.stellar.js" charset="utf-8"></script>
+            <script type="text/javascript" src="../js/jquery.stellar.js" charset="utf-8"></script>
             <!-- Sticky Div -->
-            <script type="text/javascript" src="assets/js/jquery.sticky.js" charset="utf-8"></script>
+            <script type="text/javascript" src="../js/jquery.sticky.js" charset="utf-8"></script>
             <!-- Slimbox2-->
-            <script type="text/javascript" src="assets/js/slimbox2.js" charset="utf-8"></script>
+            <script type="text/javascript" src="../js/slimbox2.js" charset="utf-8"></script>
             <!-- Modernizr -->
-            <script src="assets/js/modernizr.custom.js" type="text/javascript"></script>
+            <script src="../js/modernizr.custom.js" type="text/javascript"></script>
             <!-- End JS -->
     </body>
 </html>
