--- a/assets/html/features-accordions-tabs.html
+++ b/assets/html/features-accordions-tabs.html
@@ -14,15 +14,15 @@
         <meta name="author" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
         <!-- Favicon -->
-        <link href="favicon.ico" rel="shortcut icon">
+        <link href="https://img.icons8.com/ios/50/000000/programming.png" rel="shortcut icon" type="img/png">
         <!-- Bootstrap Core CSS -->
-        <link rel="stylesheet" href="assets/css/bootstrap.css" rel="stylesheet">
+        <link rel="stylesheet" href="../css/bootstrap.css" rel="stylesheet">
         <!-- Template CSS -->
-        <link rel="stylesheet" href="assets/css/animate.css" rel="stylesheet">
-        <link rel="stylesheet" href="assets/css/font-awesome.css" rel="stylesheet">
-        <link rel="stylesheet" href="assets/css/nexus.css" rel="stylesheet">
-        <link rel="stylesheet" href="assets/css/responsive.css" rel="stylesheet">
-        <link rel="stylesheet" href="assets/css/custom.css" rel="stylesheet">
+        <link rel="stylesheet" href="../css/animate.css" rel="stylesheet">
+        <link rel="stylesheet" href="../css/font-awesome.css" rel="stylesheet">
+        <link rel="stylesheet" href="../css/nexus.css" rel="stylesheet">
+        <link rel="stylesheet" href="../css/responsive.css" rel="stylesheet">
+        <link rel="stylesheet" href="../css/custom.css" rel="stylesheet">
         <!-- Google Fonts-->
         <link href="http://fonts.googleapis.com/css?family=Raleway:100,300,400" type="text/css" rel="stylesheet">
         <link href="http://fonts.googleapis.com/css?family=Roboto:400,300" type="text/css" rel="stylesheet">
@@ -52,8 +52,8 @@
                 <div class="row">
                     <!-- Logo -->
                     <div class="logo">
-                        <a href="index.html" title="">
-                            <img src="assets/img/logo.png" alt="Logo" />
+                        <a href="../../index.html" title="">
+                            <img src="../img/logo.png" alt="Logo" />
                         </a>
                     </div>
                     <!-- End Logo -->
@@ -64,7 +64,7 @@
                         <div class="text-center visible-lg">
                             <ul id="hornavmenu" class="nav navbar-nav">
                                 <li>
-                                    <a href="index.html" class="fa-home ">Home</a>
+                                    <a href="../../index.html" class="fa-home ">Home</a>
                                 </li>
                                 <li>
                                     <span class="fa-gears active">Features</span>
@@ -329,7 +329,7 @@
                                     <div class="panel-body">
                                         <div class="row">
                                             <div class="col-md-5">
-                                                <img src="assets/img/fillers/filler1.jpg" alt="filler image">
+                                                <img src="../img/fillers/filler1.jpg" alt="filler image">
                                             </div>
                                             <div class="col-md-7">
                                                 <h3 class="no-margin no-padding">Humanitatis Per Seacula</h3>
@@ -368,7 +368,7 @@
                                     <div class="panel-body">
                                         <div class="row">
                                             <div class="col-md-5">
-                                                <img src="assets/img/fillers/filler3.jpg" alt="filler image">
+                                                <img src="../img/fillers/filler3.jpg" alt="filler image">
                                             </div>
                                             <div class="col-md-7">
                                                 <h3 class="no-margin no-padding">Mirum Est Notare</h3>
@@ -398,7 +398,7 @@
                                     <div class="panel-body">
                                         <div class="row">
                                             <div class="col-md-5">
-                                                <img src="assets/img/fillers/filler2.jpg" alt="filler image">
+                                                <img src="../img/fillers/filler2.jpg" alt="filler image">
                                             </div>
                                             <div class="col-md-7">
                                                 <h3 class="no-margin no-padding">Humanitatis Per Seacula</h3>
@@ -437,7 +437,7 @@
                                     <div class="panel-body">
                                         <div class="row">
                                             <div class="col-md-5">
-                                                <img src="assets/img/fillers/filler3.jpg" alt="filler image">
+                                                <img src="../img/fillers/filler3.jpg" alt="filler image">
                                             </div>
                                             <div class="col-md-7">
                                                 <h3 class="no-margin no-padding">Mirum Est Notare</h3>
@@ -473,7 +473,7 @@
                                 <div class="tab-pane fade in active" id="sample-1a">
                                     <div class="row">
                                         <div class="col-md-5">
-                                            <img src="assets/img/fillers/filler3.jpg" alt="filler image">
+                                            <img src="../img/fillers/filler3.jpg" alt="filler image">
                                         </div>
                                         <div class="col-md-7">
                                             <h3 class="no-margin no-padding">Humanitatis Per Seacula</h3>
@@ -492,7 +492,7 @@
                                 <div class="tab-pane fade in" id="sample-1c">
                                     <div class="row">
                                         <div class="col-md-5">
-                                            <img src="assets/img/fillers/filler2.jpg" alt="filler image">
+                                            <img src="../img/fillers/filler2.jpg" alt="filler image">
                                         </div>
                                         <div class="col-md-7">
                                             <h3 class="no-margin no-padding">Mirum Est Notare</h3>
@@ -538,7 +538,7 @@
                                 <div class="tab-pane fade in active" id="sample-2a">
                                     <div class="row">
                                         <div class="col-md-5">
-                                            <img src="assets/img/fillers/filler1.jpg" alt="filler image">
+                                            <img src="../img/fillers/filler1.jpg" alt="filler image">
                                         </div>
                                         <div class="col-md-7">
                                             <h3 class="no-margin no-padding">Humanitatis Per Seacula</h3>
@@ -555,7 +555,7 @@
                                 <div class="tab-pane fade in" id="sample-2c">
                                     <div class="row">
                                         <div class="col-md-5">
-                                            <img src="assets/img/fillers/filler3.jpg" alt="filler image">
+                                            <img src="../img/fillers/filler3.jpg" alt="filler image">
                                         </div>
                                         <div class="col-md-7">
                                             <h3 class="no-margin no-padding">Mirum Est Notare</h3>
@@ -607,7 +607,7 @@
                                     <div class="tab-pane fade in active" id="sample-3a">
                                         <div class="row">
                                             <div class="col-md-5">
-                                                <img src="assets/img/fillers/filler2.jpg" alt="filler image">
+                                                <img src="../img/fillers/filler2.jpg" alt="filler image">
                                             </div>
                                             <div class="col-md-7">
                                                 <h3 class="no-margin no-padding">Humanitatis Per Seacula</h3>
@@ -624,7 +624,7 @@
                                     <div class="tab-pane fade in" id="sample-3c">
                                         <div class="row">
                                             <div class="col-md-5">
-                                                <img src="assets/img/fillers/filler3.jpg" alt="filler image">
+                                                <img src="../img/fillers/filler3.jpg" alt="filler image">
                                             </div>
                                             <div class="col-md-7">
                                                 <h3 class="no-margin no-padding">Mirum Est Notare</h3>
@@ -741,23 +741,23 @@
             </div>
             <!-- End Footer -->
             <!-- JS -->
-            <script type="text/javascript" src="assets/js/jquery.min.js" type="text/javascript"></script>
-            <script type="text/javascript" src="assets/js/bootstrap.min.js" type="text/javascript"></script>
-            <script type="text/javascript" src="assets/js/scripts.js"></script>
+            <script type="text/javascript" src="../js/jquery.min.js" type="text/javascript"></script>
+            <script type="text/javascript" src="../js/bootstrap.min.js" type="text/javascript"></script>
+            <script type="text/javascript" src="../js/scripts.js"></script>
             <!-- Isotope - Portfolio Sorting -->
-            <script type="text/javascript" src="assets/js/jquery.isotope.js" type="text/javascript"></script>
+            <script type="text/javascript" src="../js/jquery.isotope.js" type="text/javascript"></script>
             <!-- Mobile Menu - Slicknav -->
-            <script type="text/javascript" src="assets/js/jquery.slicknav.js" type="text/javascript"></script>
+            <script type="text/javascript" src="../js/jquery.slicknav.js" type="text/javascript"></script>
             <!-- Animate on Scroll-->
-            <script type="text/javascript" src="assets/js/jquery.visible.js" charset="utf-8"></script>
+            <script type="text/javascript" src="../js/jquery.visible.js" charset="utf-8"></script>
             <!-- Stellar Parallax -->
-            <script type="text/javascript" src="assets/js/jquery.stellar.js" charset="utf-8"></script>
+            <script type="text/javascript" src="../js/jquery.stellar.js" charset="utf-8"></script>
             <!-- Sticky Div -->
-            <script type="text/javascript" src="assets/js/jquery.sticky.js" charset="utf-8"></script>
+            <script type="text/javascript" src="../js/jquery.sticky.js" charset="utf-8"></script>
             <!-- Slimbox2-->
-            <script type="text/javascript" src="assets/js/slimbox2.js" charset="utf-8"></script>
+            <script type="text/javascript" src="../js/slimbox2.js" charset="utf-8"></script>
             <!-- Modernizr -->
-            <script src="assets/js/modernizr.custom.js" type="text/javascript"></script>
+            <script src="../js/modernizr.custom.js" type="text/javascript"></script>
             <!-- End JS -->
     </body>
 </html>
