--- a/assets/html/features-testimonials.html
+++ b/assets/html/features-testimonials.html
@@ -14,15 +14,15 @@
         <meta name="author" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
         <!-- Favicon -->
-        <link href="favicon.ico" rel="shortcut icon">
+        <link href="https://img.icons8.com/ios/50/000000/programming.png" rel="shortcut icon" type="img/png">
         <!-- Bootstrap Core CSS -->
-        <link rel="stylesheet" href="assets/css/bootstrap.css" rel="stylesheet">
+        <link rel="stylesheet" href="../css/bootstrap.css" rel="stylesheet">
         <!-- Template CSS -->
-        <link rel="stylesheet" href="assets/css/animate.css" rel="stylesheet">
-        <link rel="stylesheet" href="assets/css/font-awesome.css" rel="stylesheet">
-        <link rel="stylesheet" href="assets/css/nexus.css" rel="stylesheet">
-        <link rel="stylesheet" href="assets/css/responsive.css" rel="stylesheet">
-        <link rel="stylesheet" href="assets/css/custom.css" rel="stylesheet">
+        <link rel="stylesheet" href="../css/animate.css" rel="stylesheet">
+        <link rel="stylesheet" href="../css/font-awesome.css" rel="stylesheet">
+        <link rel="stylesheet" href="../css/nexus.css" rel="stylesheet">
+        <link rel="stylesheet" href="../css/responsive.css" rel="stylesheet">
+        <link rel="stylesheet" href="../css/custom.css" rel="stylesheet">
         <!-- Google Fonts-->
         <link href="http://fonts.googleapis.com/css?family=Raleway:100,300,400" type="text/css" rel="stylesheet">
         <link href="http://fonts.googleapis.com/css?family=Roboto:400,300" type="text/css" rel="stylesheet">
@@ -52,8 +52,8 @@
                 <div class="row">
                     <!-- Logo -->
                     <div class="logo">
-                        <a href="index.html" title="">
-                            <img src="assets/img/logo.png" alt="Logo" />
+                        <a href="../../index.html" title="">
+                            <img src="../img/logo.png" alt="Logo" />
                         </a>
                     </div>
                     <!-- End Logo -->
@@ -64,7 +64,7 @@
                         <div class="text-center visible-lg">
                             <ul id="hornavmenu" class="nav navbar-nav">
                                 <li>
-                                    <a href="index.html" class="fa-home ">Home</a>
+                                    <a href="../../index.html" class="fa-home ">Home</a>
                                 </li>
                                 <li>
                                     <span class="fa-gears active">Features</span>
@@ -334,7 +334,7 @@
                                                     porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
                                                 </p>
                                                 <div class="testimonial-info">
-                                                    <img alt="" src="assets/img/profiles/53.jpg" class="img-circle img-responsive" />
+                                                    <img alt="" src="../img/profiles/53.jpg" class="img-circle img-responsive" />
                                                     <span class="testimonial-author">
                                                         Cristina Hall
                                                         <em>
@@ -352,7 +352,7 @@
                                                     Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.
                                                 </p>
                                                 <div class="testimonial-info">
-                                                    <img alt="" src="assets/img/profiles/99.jpg" class="img-circle img-responsive" />
+                                                    <img alt="" src="../img/profiles/99.jpg" class="img-circle img-responsive" />
                                                     <span class="testimonial-author">
                                                         Anthony Watkins
                                                         <em>
@@ -370,7 +370,7 @@
                                                     porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
                                                 </p>
                                                 <div class="testimonial-info">
-                                                    <img alt="" src="assets/img/profiles/78.jpg" class="img-circle img-responsive" />
+                                                    <img alt="" src="../img/profiles/78.jpg" class="img-circle img-responsive" />
                                                     <span class="testimonial-author">
                                                         Jonathan Baker
                                                         <em>
@@ -415,7 +415,7 @@
                                                     Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
                                                 </p>
                                                 <div class="testimonial-info">
-                                                    <img alt="" src="assets/img/profiles/87.jpg" class="img-circle img-responsive" />
+                                                    <img alt="" src="../img/profiles/87.jpg" class="img-circle img-responsive" />
                                                     <span class="testimonial-author">
                                                         Jessie Rodgers
                                                         <em>
@@ -432,7 +432,7 @@
                                                     Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.
                                                 </p>
                                                 <div class="testimonial-info">
-                                                    <img alt="" src="assets/img/profiles/99.jpg" class="img-circle img-responsive" />
+                                                    <img alt="" src="../img/profiles/99.jpg" class="img-circle img-responsive" />
                                                     <span class="testimonial-author">
                                                         Anthony Watkins
                                                         <em>
@@ -449,7 +449,7 @@
                                                     Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
                                                 </p>
                                                 <div class="testimonial-info">
-                                                    <img alt="" src="assets/img/profiles/78.jpg" class="img-circle img-responsive" />
+                                                    <img alt="" src="../img/profiles/78.jpg" class="img-circle img-responsive" />
                                                     <span class="testimonial-author">
                                                         Jonathan Baker
                                                         <em>
@@ -491,7 +491,7 @@
                                                     Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
                                                 </p>
                                                 <div class="testimonial-info">
-                                                    <img alt="" src="assets/img/profiles/99.jpg" class="img-circle img-responsive" />
+                                                    <img alt="" src="../img/profiles/99.jpg" class="img-circle img-responsive" />
                                                     <span class="testimonial-author">
                                                         Anthony Watkins
                                                         <em>
@@ -508,7 +508,7 @@
                                                     Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.
                                                 </p>
                                                 <div class="testimonial-info">
-                                                    <img alt="" src="assets/img/profiles/87.jpg" class="img-circle img-responsive" />
+                                                    <img alt="" src="../img/profiles/87.jpg" class="img-circle img-responsive" />
                                                     <span class="testimonial-author">
                                                         Cristina Hall
                                                         <em>
@@ -525,7 +525,7 @@
                                                     Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
                                                 </p>
                                                 <div class="testimonial-info">
-                                                    <img alt="" src="assets/img/profiles/78.jpg" class="img-circle img-responsive" />
+                                                    <img alt="" src="../img/profiles/78.jpg" class="img-circle img-responsive" />
                                                     <span class="testimonial-author">
                                                         Jonathan Baker
                                                         <em>
@@ -562,7 +562,7 @@
                                                     Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
                                                 </p>
                                                 <div class="testimonial-info">
-                                                    <img alt="" src="assets/img/profiles/37.jpg" class="img-circle img-responsive" />
+                                                    <img alt="" src="../img/profiles/37.jpg" class="img-circle img-responsive" />
                                                     <span class="testimonial-author">
                                                         Alice Carter
                                                         <em>
@@ -579,7 +579,7 @@
                                                     Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.
                                                 </p>
                                                 <div class="testimonial-info">
-                                                    <img alt="" src="assets/img/profiles/84.jpg" class="img-circle img-responsive" />
+                                                    <img alt="" src="../img/profiles/84.jpg" class="img-circle img-responsive" />
                                                     <span class="testimonial-author">
                                                         Denise Campbell
                                                         <em>
@@ -596,7 +596,7 @@
                                                     Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
                                                 </p>
                                                 <div class="testimonial-info">
-                                                    <img alt="" src="assets/img/profiles/78.jpg" class="img-circle img-responsive" />
+                                                    <img alt="" src="../img/profiles/78.jpg" class="img-circle img-responsive" />
                                                     <span class="testimonial-author">
                                                         David Perez
                                                         <em>
@@ -782,23 +782,23 @@
             </div>
             <!-- End Footer -->
             <!-- JS -->
-            <script type="text/javascript" src="assets/js/jquery.min.js" type="text/javascript"></script>
-            <script type="text/javascript" src="assets/js/bootstrap.min.js" type="text/javascript"></script>
-            <script type="text/javascript" src="assets/js/scripts.js"></script>
+            <script type="text/javascript" src="../js/jquery.min.js" type="text/javascript"></script>
+            <script type="text/javascript" src="../js/bootstrap.min.js" type="text/javascript"></script>
+            <script type="text/javascript" src="../js/scripts.js"></script>
             <!-- Isotope - Portfolio Sorting -->
-            <script type="text/javascript" src="assets/js/jquery.isotope.js" type="text/javascript"></script>
+            <script type="text/javascript" src="../js/jquery.isotope.js" type="text/javascript"></script>
             <!-- Mobile Menu - Slicknav -->
-            <script type="text/javascript" src="assets/js/jquery.slicknav.js" type="text/javascript"></script>
+            <script type="text/javascript" src="../js/jquery.slicknav.js" type="text/javascript"></script>
             <!-- Animate on Scroll-->
-            <script type="text/javascript" src="assets/js/jquery.visible.js" charset="utf-8"></script>
+            <script type="text/javascript" src="../js/jquery.visible.js" charset="utf-8"></script>
             <!-- Stellar Parallax -->
-            <script type="text/javascript" src="assets/js/jquery.stellar.js" charset="utf-8"></script>
+            <script type="text/javascript" src="../js/jquery.stellar.js" charset="utf-8"></script>
             <!-- Sticky Div -->
-            <script type="text/javascript" src="assets/js/jquery.sticky.js" charset="utf-8"></script>
+            <script type="text/javascript" src="../js/jquery.sticky.js" charset="utf-8"></script>
             <!-- Slimbox2-->
-            <script type="text/javascript" src="assets/js/slimbox2.js" charset="utf-8"></script>
+            <script type="text/javascript" src="../js/slimbox2.js" charset="utf-8"></script>
             <!-- Modernizr -->
-            <script src="assets/js/modernizr.custom.js" type="text/javascript"></script>
+            <script src="../js/modernizr.custom.js" type="text/javascript"></script>
             <!-- End JS -->
     </body>
 </html>
