--- a/assets/html/portfolio-4-column.html
+++ b/assets/html/portfolio-4-column.html
@@ -14,15 +14,15 @@
         <meta name="author" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
         <!-- Favicon -->
-        <link href="favicon.ico" rel="shortcut icon">
+        <link href="https://img.icons8.com/ios/50/000000/programming.png" rel="shortcut icon" type="img/png">
         <!-- Bootstrap Core CSS -->
-        <link rel="stylesheet" href="assets/css/bootstrap.css" rel="stylesheet">
+        <link rel="stylesheet" href="../css/bootstrap.css" rel="stylesheet">
         <!-- Template CSS -->
-        <link rel="stylesheet" href="assets/css/animate.css" rel="stylesheet">
-        <link rel="stylesheet" href="assets/css/font-awesome.css" rel="stylesheet">
-        <link rel="stylesheet" href="assets/css/nexus.css" rel="stylesheet">
-        <link rel="stylesheet" href="assets/css/responsive.css" rel="stylesheet">
-        <link rel="stylesheet" href="assets/css/custom.css" rel="stylesheet">
+        <link rel="stylesheet" href="../css/animate.css" rel="stylesheet">
+        <link rel="stylesheet" href="../css/font-awesome.css" rel="stylesheet">
+        <link rel="stylesheet" href="../css/nexus.css" rel="stylesheet">
+        <link rel="stylesheet" href="../css/responsive.css" rel="stylesheet">
+        <link rel="stylesheet" href="../css/custom.css" rel="stylesheet">
         <!-- Google Fonts-->
         <link href="http://fonts.googleapis.com/css?family=Raleway:100,300,400" type="text/css" rel="stylesheet">
         <link href="http://fonts.googleapis.com/css?family=Roboto:400,300" type="text/css" rel="stylesheet">
@@ -52,8 +52,8 @@
                 <div class="row">
                     <!-- Logo -->
                     <div class="logo">
-                        <a href="index.html" title="">
-                            <img src="assets/img/logo.png" alt="Logo" />
+                        <a href="../../index.html" title="">
+                            <img src="../img/logo.png" alt="Logo" />
                         </a>
                     </div>
                     <!-- End Logo -->
@@ -64,7 +64,7 @@
                         <div class="text-center visible-lg">
                             <ul id="hornavmenu" class="nav navbar-nav">
                                 <li>
-                                    <a href="index.html" class="fa-home ">Home</a>
+                                    <a href="../../index.html" class="fa-home ">Home</a>
                                 </li>
                                 <li>
                                     <span class="fa-gears ">Features</span>
@@ -252,7 +252,7 @@
                                     <div class="featured-info">
                                         <div class="info-wrapper">Velit esse molestie</div>
                                     </div>
-                                    <img alt="image1" src="assets/img/portfolio/image1.jpg">
+                                    <img alt="image1" src="../img/portfolio/image1.jpg">
                                 </div>
                             </figure>
                         </a>
@@ -268,7 +268,7 @@
                                     <div class="featured-info">
                                         <div class="info-wrapper">Quam nunc putamus</div>
                                     </div>
-                                    <img alt="image2" src="assets/img/portfolio/image2.jpg">
+                                    <img alt="image2" src="../img/portfolio/image2.jpg">
                                 </div>
                             </figure>
                         </a>
@@ -284,7 +284,7 @@
                                     <div class="featured-info">
                                         <div class="info-wrapper">Placerat facer possim</div>
                                     </div>
-                                    <img alt="image3" src="assets/img/portfolio/image3.jpg">
+                                    <img alt="image3" src="../img/portfolio/image3.jpg">
                                 </div>
                             </figure>
                         </a>
@@ -300,7 +300,7 @@
                                     <div class="featured-info">
                                         <div class="info-wrapper">Nam liber tempor</div>
                                     </div>
-                                    <img alt="image4" src="assets/img/portfolio/image4.jpg">
+                                    <img alt="image4" src="../img/portfolio/image4.jpg">
                                 </div>
                             </figure>
                         </a>
@@ -316,7 +316,7 @@
                                     <div class="featured-info">
                                         <div class="info-wrapper">Donec non urna</div>
                                     </div>
-                                    <img alt="image5" src="assets/img/portfolio/image5.jpg">
+                                    <img alt="image5" src="../img/portfolio/image5.jpg">
                                 </div>
                             </figure>
                         </a>
@@ -332,7 +332,7 @@
                                     <div class="featured-info">
                                         <div class="info-wrapper">Nullam consectetur</div>
                                     </div>
-                                    <img alt="image6" src="assets/img/portfolio/image6.jpg">
+                                    <img alt="image6" src="../img/portfolio/image6.jpg">
                                 </div>
                             </figure>
                         </a>
@@ -348,7 +348,7 @@
                                     <div class="featured-info">
                                         <div class="info-wrapper">Velit esse molestie</div>
                                     </div>
-                                    <img alt="image7" src="assets/img/portfolio/image7.jpg">
+                                    <img alt="image7" src="../img/portfolio/image7.jpg">
                                 </div>
                             </figure>
                         </a>
@@ -364,7 +364,7 @@
                                     <div class="featured-info">
                                         <div class="info-wrapper">Quam nunc putamus</div>
                                     </div>
-                                    <img alt="image8" src="assets/img/portfolio/image8.jpg">
+                                    <img alt="image8" src="../img/portfolio/image8.jpg">
                                 </div>
                             </figure>
                         </a>
@@ -380,7 +380,7 @@
                                     <div class="featured-info">
                                         <div class="info-wrapper">Placerat facer possim</div>
                                     </div>
-                                    <img alt="image9" src="assets/img/portfolio/image9.jpg">
+                                    <img alt="image9" src="../img/portfolio/image9.jpg">
                                 </div>
                             </figure>
                         </a>
@@ -396,7 +396,7 @@
                                     <div class="featured-info">
                                         <div class="info-wrapper">Soluta nobis eleifend</div>
                                     </div>
-                                    <img alt="image10" src="assets/img/portfolio/image10.jpg">
+                                    <img alt="image10" src="../img/portfolio/image10.jpg">
                                 </div>
                             </figure>
                         </a>
@@ -412,7 +412,7 @@
                                     <div class="featured-info">
                                         <div class="info-wrapper">Aenean venenatis</div>
                                     </div>
-                                    <img alt="image11" src="assets/img/portfolio/image11.jpg">
+                                    <img alt="image11" src="../img/portfolio/image11.jpg">
                                 </div>
                             </figure>
                         </a>
@@ -428,7 +428,7 @@
                                     <div class="featured-info">
                                         <div class="info-wrapper">Sed ut perspiciatis</div>
                                     </div>
-                                    <img alt="image12" src="assets/img/portfolio/image12.jpg">
+                                    <img alt="image12" src="../img/portfolio/image12.jpg">
                                 </div>
                             </figure>
                         </a>
@@ -527,23 +527,23 @@
             </div>
             <!-- End Footer -->
             <!-- JS -->
-            <script type="text/javascript" src="assets/js/jquery.min.js" type="text/javascript"></script>
-            <script type="text/javascript" src="assets/js/bootstrap.min.js" type="text/javascript"></script>
-            <script type="text/javascript" src="assets/js/scripts.js"></script>
+            <script type="text/javascript" src="../js/jquery.min.js" type="text/javascript"></script>
+            <script type="text/javascript" src="../js/bootstrap.min.js" type="text/javascript"></script>
+            <script type="text/javascript" src="../js/scripts.js"></script>
             <!-- Isotope - Portfolio Sorting -->
-            <script type="text/javascript" src="assets/js/jquery.isotope.js" type="text/javascript"></script>
+            <script type="text/javascript" src="../js/jquery.isotope.js" type="text/javascript"></script>
             <!-- Mobile Menu - Slicknav -->
-            <script type="text/javascript" src="assets/js/jquery.slicknav.js" type="text/javascript"></script>
+            <script type="text/javascript" src="../js/jquery.slicknav.js" type="text/javascript"></script>
             <!-- Animate on Scroll-->
-            <script type="text/javascript" src="assets/js/jquery.visible.js" charset="utf-8"></script>
+            <script type="text/javascript" src="../js/jquery.visible.js" charset="utf-8"></script>
             <!-- Stellar Parallax -->
-            <script type="text/javascript" src="assets/js/jquery.stellar.js" charset="utf-8"></script>
+            <script type="text/javascript" src="../js/jquery.stellar.js" charset="utf-8"></script>
             <!-- Sticky Div -->
-            <script type="text/javascript" src="assets/js/jquery.sticky.js" charset="utf-8"></script>
+            <script type="text/javascript" src="../js/jquery.sticky.js" charset="utf-8"></script>
             <!-- Slimbox2-->
-            <script type="text/javascript" src="assets/js/slimbox2.js" charset="utf-8"></script>
+            <script type="text/javascript" src="../js/slimbox2.js" charset="utf-8"></script>
             <!-- Modernizr -->
-            <script src="assets/js/modernizr.custom.js" type="text/javascript"></script>
+            <script src="../js/modernizr.custom.js" type="text/javascript"></script>
             <!-- End JS -->
     </body>
 </html>
