--- a/index.html
+++ b/index.html
@@ -228,6 +228,12 @@
                   <span class="overlay"><span class="valign"></span><span class="title">pullos.com</span></span>
                 </a>
               </li>
+              <li class="col-md-4 col-sm-4 col-xs-12 mix bw" data-cat="bw">
+                <a data-toggle="modal" data-target="#password" class="mix-cover green">
+                  <img class="vertical" src="img/password_1.png" alt="Black and White">
+                  <span class="overlay"><span class="valign"></span><span class="title lng-generator">Generator Pasword</span></span>
+                </a>
+              </li>
             </ul>
           
           
@@ -372,6 +378,21 @@
                 </div><!-- /.modal-content -->
               </div><!-- /.modal-dialog -->
             </div><!-- /.modal -->
+
+            <div class="modal fade" id="password" tabindex="-1" role="dialog" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title text-center lng-password">How to Generate Random Password with PHP</h4>
+                    <a href="http://wordtest.rf.gd/index.php" target="_blank"><button type="button" class="demo lng-password_demo" aria-hidden="true">Version Demo</button></a>
+                  </div>
+                  <div class="modal-body">
+                    <img class="thumbnail" alt="forest" src="img/password.png" />
+                  </div>
+                </div><!-- /.modal-content -->
+              </div><!-- /.modal-dialog -->
+            </div><!-- /.modal -->
             <!-- /Load Photo in Modal -->	
           </div>	
         </div>
@@ -388,7 +409,7 @@
           </div>
           <div class="col-md-5 col-md-offset-3">
             <!-- contact form starts -->
-            <form data-netlify="true" action="contact.php" method="post" name="contactform" id="contact-form" class="form-horizontal">
+            <form action="contact.php" method="post" name="contactform" id="contact-form" class="form-horizontal">
               <fieldset>
                       <div class="form-group">
                         <label class="col-sm-4 control-label" for="name"></label>
