--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <h2 class="lng-project">My Projects</h2>
             <h3>
               <span class="filter label label-default lng-project_all" data-filter="all">Skills</span>
-              <span class="filter label label-default lng-project_one" data-filter="bw">Features</span>
+              <span class="filter label label-default lng-project_one" data-filter="bw">Function</span>
               <span class="filter label label-default lng-project_two" data-filter="nature">Sites</span>
               <span class="filter label label-default lng-project_three" data-filter="portraits">Desing</span>
             </h3>
@@ -232,6 +232,13 @@
                 <a data-toggle="modal" data-target="#password" class="mix-cover green">
                   <img class="vertical" src="img/password_1.png" alt="Black and White">
                   <span class="overlay"><span class="valign"></span><span class="title lng-generator">Generator Pasword</span></span>
+                </a>
+              </li>
+
+              <li class="col-md-4 col-sm-4 col-xs-12 mix bw" data-cat="bw">
+                <a data-toggle="modal" data-target="#form_validate" class="mix-cover green">
+                  <img class="vertical" src="img/form_test _1.png" alt="Black and White">
+                  <span class="overlay"><span class="valign"></span><span class="title lng-form_validate">Form Validate PHP</span></span>
                 </a>
               </li>
             </ul>
@@ -389,6 +396,22 @@
                   </div>
                   <div class="modal-body">
                     <img class="thumbnail" alt="forest" src="img/password.png" />
+                  </div>
+                </div><!-- /.modal-content -->
+              </div><!-- /.modal-dialog -->
+            </div><!-- /.modal -->
+
+            <div class="modal fade" id="form_validate" tabindex="-1" role="dialog" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title text-center lng-form_validate_one">How to Validate Form with PHP</h4>
+                    <a href="http://wordtest.rf.gd/form/demo.php" target="_blank"><button type="button" class="demo lng-password_demo_1"
+                        aria-hidden="true">Version Demo</button></a>
+                  </div>
+                  <div class="modal-body">
+                    <img class="thumbnail" alt="forest" src="img/form_test.png" />
                   </div>
                 </div><!-- /.modal-content -->
               </div><!-- /.modal-dialog -->
