--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                   <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     <h4 class="modal-title text-center lng-password">How to Generate Random Password with PHP</h4>
-                    <a href="http://wordtest.rf.gd/index.php" target="_blank"><button type="button" class="demo lng-password_demo" aria-hidden="true">Version Demo</button></a>
+                    <a href="http://facesar.lovestoblog.com/index.php" target="_blank"><button type="button" class="demo lng-password_demo" aria-hidden="true">Version Demo</button></a>
                   </div>
                   <div class="modal-body">
                     <img class="thumbnail" alt="forest" src="img/password.png" />
@@ -407,7 +407,7 @@
                   <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     <h4 class="modal-title text-center lng-form_validate_one">How to Validate Form with PHP</h4>
-                    <a href="http://wordtest.rf.gd/form/demo.php" target="_blank"><button type="button" class="demo lng-password_demo_1"
+                    <a href="http://facesar.lovestoblog.com/form/demo.php" target="_blank"><button type="button" class="demo lng-password_demo_1"
                         aria-hidden="true">Version Demo</button></a>
                   </div>
                   <div class="modal-body">
