--- a/index.html
+++ b/index.html
@@ -222,12 +222,6 @@
                     <span class="overlay"><span class="valign"></span><span class="title">Git / GITHUB</span></span>                  
                   </a>
               </li>
-              <li class="col-md-4 col-sm-4 col-xs-12 mix nature" data-cat="bw">
-                <a data-toggle="modal" data-target="#coco" class="mix-cover green">
-                  <img class="vertical" src="img/pullo_1.png" alt="Black and White">
-                  <span class="overlay"><span class="valign"></span><span class="title">pullos.com</span></span>
-                </a>
-              </li>
               <li class="col-md-4 col-sm-4 col-xs-12 mix bw" data-cat="bw">
                 <a data-toggle="modal" data-target="#password" class="mix-cover green">
                   <img class="vertical" src="img/password_1.png" alt="Black and White">
@@ -235,10 +229,36 @@
                 </a>
               </li>
 
+              <li class="col-md-4 col-sm-4 col-xs-12 mix nature portraits" data-cat="bw">
+                <a data-toggle="modal" data-target="#coco" class="mix-cover green">
+                  <img class="vertical" src="img/pullo_1.png" alt="Black and White">
+                  <span class="overlay"><span class="valign"></span><span class="title">pullos.surge.sh</span></span>
+                </a>
+              </li>
+
               <li class="col-md-4 col-sm-4 col-xs-12 mix bw" data-cat="bw">
                 <a data-toggle="modal" data-target="#form_validate" class="mix-cover green">
-                  <img class="vertical" src="img/form_test _1.png" alt="Black and White">
+                  <img class="vertical" src="img/form_1.png" alt="Black and White">
                   <span class="overlay"><span class="valign"></span><span class="title lng-form_validate">Form Validate PHP</span></span>
+                </a>
+              </li>
+
+              <li class="col-md-4 col-sm-4 col-xs-12 mix portraits" data-cat="bw">
+                <a data-toggle="modal" data-target="#butterfly" class="mix-cover green">
+                  <img class="vertical" src="img/butterfly_1.png" alt="Black and White">
+                  <span class="overlay"><span class="valign"></span><span class="title lng-butterfly_1">Web App</span></span>
+                </a>
+              </li>
+              <li class="col-md-4 col-sm-4 col-xs-12 mix bw" data-cat="bw">
+                <a data-toggle="modal" data-target="#upload" class="mix-cover green">
+                  <img class="vertical" src="img/upload_1.png" alt="Black and White">
+                  <span class="overlay"><span class="valign"></span><span class="title lng-upload_image_1">Upload An Inamge</span></span>
+                </a>
+              </li>
+              <li class="col-md-4 col-sm-4 col-xs-12 mix nature portraits" data-cat="bw">
+                <a data-toggle="modal" data-target="#espa" class="mix-cover green">
+                  <img class="vertical" src="img/espa_1.png" alt="Black and White">
+                  <span class="overlay"><span class="valign"></span><span class="title">nuestraola.com</span></span>
                 </a>
               </li>
             </ul>
@@ -377,10 +397,12 @@
                 <div class="modal-content">
                   <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title text-center">site about shoes</h4>
+                    <h4 class="modal-title text-center lng-shoes">site about shoes</h4>
+                    <a href="https://pullos.surge.sh/" target="_blank"><button type="button" class="demo lng-password_demo"
+                  aria-hidden="true">Version Demo</button></a>
                   </div>
                   <div class="modal-body">
-                      <img class="thumbnail" alt="forest" src="img/pullo.png" />
+                      <img class="thumbnail" alt="forest" src="img/pullos_2.png" />
                   </div>
                 </div><!-- /.modal-content -->
               </div><!-- /.modal-dialog -->
@@ -411,12 +433,63 @@
                         aria-hidden="true">Version Demo</button></a>
                   </div>
                   <div class="modal-body">
-                    <img class="thumbnail" alt="forest" src="img/form_test.png" />
+                    <img class="thumbnail" alt="forest" src="img/form.png" />
                   </div>
                 </div><!-- /.modal-content -->
               </div><!-- /.modal-dialog -->
             </div><!-- /.modal -->
             <!-- /Load Photo in Modal -->	
+
+            <div class="modal fade" id="butterfly" tabindex="-1" role="dialog" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title text-center lng-butterfly">Web App About Butterfly With PHP</h4>
+                    <a href="https://facesar.lovestoblog.com/form_2/index.php?i=1" target="_blank"><button type="button"
+                        class="demo lng-butterfly_2" aria-hidden="true">Version Demo</button></a>
+                  </div>
+                  <div class="modal-body">
+                    <img class="thumbnail" alt="forest" src="img/butterfly.jpg" />
+                  </div>
+                </div><!-- /.modal-content -->
+              </div><!-- /.modal-dialog -->
+            </div><!-- /.modal -->
+            <!-- /Load Photo in Modal -->
+
+            <div class="modal fade" id="upload" tabindex="-1" role="dialog" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title text-center lng-upload_image">How to Upload An Image With PHP</h4>
+                    <a href="https://facesar.lovestoblog.com/upload/index.php" target="_blank"><button type="button"
+                        class="demo lng-upload_image_2" aria-hidden="true">Version Demo</button></a>
+                  </div>
+                  <div class="modal-body">
+                    <img class="thumbnail" alt="forest" src="img/upload.png" />
+                  </div>
+                </div><!-- /.modal-content -->
+              </div><!-- /.modal-dialog -->
+            </div><!-- /.modal -->
+            <!-- /Load Photo in Modal -->
+
+            <div class="modal fade" id="espa" tabindex="-1" role="dialog" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title text-center lng-espa">Courses of Spanish Language</h4>
+                    <a href="https://nuestraola.com/" target="_blank"><button type="button"
+                        class="demo lng-espa_2" aria-hidden="true">Version Demo</button></a>
+                  </div>
+                  <div class="modal-body">
+                    <img class="thumbnail" alt="forest" src="img/espa.png" />
+                  </div>
+                </div><!-- /.modal-content -->
+              </div><!-- /.modal-dialog -->
+            </div><!-- /.modal -->
+            <!-- /Load Photo in Modal -->
           </div>	
         </div>
 		  </div>
