--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                   <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     <h4 class="modal-title text-center lng-password">How to Generate Random Password with PHP</h4>
-                    <a href="http://facesar.lovestoblog.com/" target="_blank"><button type="button" class="demo lng-password_demo" aria-hidden="true">Version Demo</button></a>
+                    <a href="https://facesar.lovestoblog.com/" target="_blank"><button type="button" class="demo lng-password_demo" aria-hidden="true">Version Demo</button></a>
                   </div>
                   <div class="modal-body">
                     <img class="thumbnail" alt="forest" src="img/password.png" />
@@ -429,7 +429,7 @@
                   <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     <h4 class="modal-title text-center lng-form_validate_one">How to Validate Form with PHP</h4>
-                    <a href="http://facesar.lovestoblog.com/main/form/demo.php" target="_blank"><button type="button" class="demo lng-password_demo_1"
+                    <a href="https://facesar.lovestoblog.com/main/form/demo.php" target="_blank"><button type="button" class="demo lng-password_demo_1"
                         aria-hidden="true">Version Demo</button></a>
                   </div>
                   <div class="modal-body">
@@ -446,7 +446,7 @@
                   <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     <h4 class="modal-title text-center lng-butterfly">Web App About Butterfly With PHP</h4>
-                    <a href="http://facesar.lovestoblog.com/main/form_2/index.php" target="_blank"><button type="button"
+                    <a href="https://facesar.lovestoblog.com/main/form_2/index.php" target="_blank"><button type="button"
                         class="demo lng-butterfly_2" aria-hidden="true">Version Demo</button></a>
                   </div>
                   <div class="modal-body">
@@ -463,7 +463,7 @@
                   <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     <h4 class="modal-title text-center lng-upload_image">How to Upload An Image With PHP</h4>
-                    <a href="http://facesar.lovestoblog.com/main/upload/index.php" target="_blank"><button type="button"
+                    <a href="https://facesar.lovestoblog.com/main/upload/index.php" target="_blank"><button type="button"
                         class="demo lng-upload_image_2" aria-hidden="true">Version Demo</button></a>
                   </div>
                   <div class="modal-body">
