--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
               <li class="col-md-4 col-sm-4 col-xs-12 mix nature" data-cat="bw">
                 <a data-toggle="modal" data-target="#tv" class="mix-cover green">
                   <img class="vertical" src="img/tv_1.png" alt="Black and White">
-                  <span class="overlay"><span class="valign"></span><span class="title">Project Webpack</span></span>
+                  <span class="overlay"><span class="valign"></span><span class="title lng-tv">Project Webpack</span></span>
                 </a>
               </li>
             </ul>
@@ -502,8 +502,8 @@
                 <div class="modal-content">
                   <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title text-center lng-espa">Landing Page LESS, WEBPACK</h4>
-                    <a href="https://facesar.github.io/online-TV---league/dist/" target="_blank"><button type="button" class="demo lng-espa_2"
+                    <h4 class="modal-title text-center lng-tv_1">Landing Page LESS, WEBPACK</h4>
+                    <a href="https://facesar.github.io/online-TV---league/dist/" target="_blank"><button type="button" class="demo lng-tv_2"
                         aria-hidden="true">Version Demo</button></a>
                   </div>
                   <div class="modal-body">
