--- a/index.html
+++ b/index.html
@@ -267,6 +267,12 @@
                   <span class="overlay"><span class="valign"></span><span class="title lng-tv">Project Webpack</span></span>
                 </a>
               </li>
+              <li class="col-md-4 col-sm-4 col-xs-12 mix nature portraits" data-cat="bw">
+                <a data-toggle="modal" data-target="#taste" class="mix-cover green">
+                  <img class="vertical" src="img/taste1.png" alt="Taste">
+                  <span class="overlay"><span class="valign"></span><span class="title lng-taste">Slide-Animation</span></span>
+                </a>
+              </li>
             </ul>
           
           
@@ -508,6 +514,23 @@
                   </div>
                   <div class="modal-body">
                     <img class="thumbnail" alt="forest" src="img/tv.png" />
+                  </div>
+                </div><!-- /.modal-content -->
+              </div><!-- /.modal-dialog -->
+            </div><!-- /.modal -->
+            <!-- /Load Photo in Modal -->
+
+            <div class="modal fade" id="taste" tabindex="-1" role="dialog" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title text-center lng-taste_1">Slide-Animation With Less and Slick-slide</h4>
+                    <a href="https://facesar.github.io/slide-animation/dist/" target="_blank"><button type="button"
+                        class="demo lng-taste_2" aria-hidden="true">Version Demo</button></a>
+                  </div>
+                  <div class="modal-body">
+                    <img class="thumbnail" alt="forest" src="img/taste.png" />
                   </div>
                 </div><!-- /.modal-content -->
               </div><!-- /.modal-dialog -->
