--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="top" class="header">
       <div class="vert-text">
 	      <img class="img-rounded" alt="Company Logo" src="./img/logo.jpg"/>
-        <h2 class="lng-header"><em>Web Developer | UX/UI Designer</em></h2>
+        <h2 class="lng-header"><em>Web Developer</em></h2>
         <h2 class="lng-name"><em>Fabio Rostran</em></h2>
 		    <ul class="list-inline">
               <li><a href="mailto:rostranespinoza@gmail.com" class="icon_google"><i class="fa fa-google-plus fa-3x"></i></a></li>
@@ -73,9 +73,9 @@
           <div class="col-md-8 col-md-offset-2 text-center">
             <h2 class="lng-main">About Me</h2>
             <h3 class="lng-main_one">WEB DEVELOPMENT WELCOME TO MY PAGE</h3>
-            <p class="lead lng-main_two">We’re the perfect blend of creative and technical. If you need flawless product execution and jaw-dropping design that
+            <p class="lead lng-main_two">If you need flawless product execution and jaw-dropping design that
             entices your audience — then hello, it’s nice to meet you.</p>
-            <p class="lead"><span class="lng-main_three"> I'm Web Developer JavaScript and PHP, UX/UI Design. I am enthusiastic about programming languages ​​and obsessed with
+            <p class="lead"><span class="lng-main_three"> I'm Web Developer JavaScript and PHP. I am enthusiastic about programming languages ​​and obsessed with
             the quality of the code. You can view source codes of me in my</span> <a href="https://github.com/facesar">github</a>.</p>
           </div>
         </div>
@@ -600,7 +600,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-md-offset-3 text-center">
-           <h2 class="lng-web">Web Developer | UX/UI Designer</h2>
+           <h2 class="lng-web">Web Developer</h2>
            <p class="dolje">2018 - <script>document.write(new Date().getFullYear())</script> Copyright &copy; <a href="#" class="linkline">fabio_code</a></p>
           </div>
         </div>
