--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
         <div class="row">
           <div class="col-md-6 col-md-offset-3 text-center">
            <h2 class="lng-web">Web Developer</h2>
-           <p class="dolje">2018 - <script>document.write(new Date().getFullYear())</script> Copyright &copy; <a href="#" class="linkline">fabio_code</a></p>
+           <p class="dolje">2018 - <script>document.write(new Date().getFullYear())</script> Copyright &copy; <a href="https://github.com/facesar" class="linkline">fabio_code</a></p>
           </div>
         </div>
       </div>
